Added Implementation for Black List on Ariline Driver

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -14,3 +14,6 @@
 /Review$SortReveiwByGreatestRating.class
 /Review$SortReveiwByLeastRating.class
 /AirlineDriver$SortReveiwByLeastRating.class
+/AirlineSystemDriver.class
+/CustomerDriver.class
+/Customer$CustomerUsernameSorter.class
