Implemented PastFlgihts, viewing and writing reviews

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -20,3 +20,4 @@
 /Flight$SortFlightCost.class
 /Flight$SortFlightDestination.class
 /Flight$SortFlightStart.class
+/Flight$SortFlightAirlineNumber.class
